--- a/egz2306Poczta/MainWindow.axaml
+++ b/egz2306Poczta/MainWindow.axaml
@@ -11,17 +11,18 @@
         WindowStartupLocation="CenterScreen"
         Padding="30"
         >
+
     <!-- Definicja stylów -->
     <Window.Styles>
         <!-- zdefiniowanie pseudoklasy header dla TextBlocków -->
+        <!--<Style Selector="TargetControlClass.styleClassName"-->
         <Style Selector="TextBlock.header">
-            <Setter Property="FontWeight" Value="Bold"/>
-            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="FontSize" Value="13"/>
             <Setter Property="FontWeight" Value="Bold"/>
             <Setter Property="Background" Value="White"/>
             <Setter Property="HorizontalAlignment" Value="Left"/>
-            <Setter Property="Padding" Value="5,0,5,"/>
-            <Setter Property="Margin" Value="0,-25,0,10"/>
+            <Setter Property="Padding" Value="4,0,5,0"/>
+            <Setter Property="Margin" Value="-1,-25,0,10"/>
         </Style>
     </Window.Styles>
     
