--- a/egz2306Poczta/MainWindow.axaml
+++ b/egz2306Poczta/MainWindow.axaml
@@ -7,7 +7,9 @@
         Title="Nadaj Przesyłkę PESEL"
         Width="800"
         Height="400"
-        CanResize="False"
+        MinHeight="400"
+        MinWidth="800"
+        CanResize="True"
         WindowStartupLocation="CenterScreen"
         Padding="30"
         >
@@ -36,8 +38,8 @@
         </Grid.ColumnDefinitions>
         
        <Grid.RowDefinitions>
-           <RowDefinition Height="Auto"/>
-           <RowDefinition Height="Auto"/>
+           <RowDefinition Height="2*"/>
+           <RowDefinition Height="*"/>
        </Grid.RowDefinitions> 
         
         <!-- Rodzaj przesyłki -->
@@ -95,25 +97,20 @@
                 <TextBlock Text="Ulica z numerem"  Margin="0,0,0,10"/>
                 <TextBox Watermark="Konopnickiej 98" Margin="0,0,0,10" />
                 
-                <TextBlock Text="Kod pocztowy" Margin="0,0,0,10" />
+                <TextBlock x:Name="CityCode" Text="Kod pocztowy" Margin="0,0,0,10" />
                 <TextBox Watermark="65124" Width="100" HorizontalAlignment="Left" 
                          Margin="0,0,0,10" />
                 
                 <TextBlock Text="Miasto" Margin="0,0,0,10" />
                 <TextBox Watermark="Olsztyn" Margin="0,0,0,10" />
             </StackPanel>
-            
-        
-       
-            
         </Border>
         
-        
         <!-- Zatwierdz Button (bottom) -->
-        <Button Content="Zatwierdź" Grid.Row="2" 
+        <Button Content="Zatwierdź" Grid.Row="1" Grid.Column="0"
                 Grid.ColumnSpan="2" HorizontalAlignment="Stretch" 
                 HorizontalContentAlignment="Center"
-                Margin="10" /> 
+                Margin="10" Click="SubmitButton"/> 
         
         
     </Grid>
